[package]
name = "nom-indent"
version = "0.1.0"
authors = ["monomadic <deathdisco@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "6.0.1", features = ["std"] }
nom_locate = "3.0.0"
rctree = "0.3.3"
